[gd_scene load_steps=4 format=2]

[ext_resource path="res://Arrow/Arrow.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 12.0

[node name="Arrow" type="Node2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 1 )
speed = 14.0

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.57079
scale = Vector2( 0.255, 1 )
texture = ExtResource( 2 )

[node name="HitBox" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2( 24, 0 )
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
modulate = Color( 0, 1, 0.486275, 0.529412 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true

[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
